<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Join My Bridge</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_import_contacts">Import from Contacts</string>
    <string name="action_import_calendar">Import from Calendar</string>
    <string name="search_hint">Search PhoneBook</string>
    <string name="call_picker_title">Dial In With:</string>
    <string name="call_button">CALL</string>
    <string name="modify_bridge">Modify</string>
    <string name="export_bridge">Export to Contacts</string>
    <string name="share_button">SHARE</string>
    <string name="send_bridge">Send Bridge Info</string>
    <string name="share_subject">Join My Conference Call Bridge</string>
    <string name="new_bridge">New Bridge</string>
    <string name="delete_bridge">Delete</string>
    <string name="save_bridge">Save</string>
    <string name="call_option_title">Call Options</string>
    <string name="empty_list">No Bridges Saved</string>
    <string name="deleted_bridge">Bridge Deleted.\nSwipe again to confirm.</string>
    <string name="phonebook_title">Join My Bridge</string>
    <string name="bridgeParticipantCodeLabel">Participant Code</string>
    <string name="bridgeHostCodeLabel">Host Code</string>
    <string name="bridge_name_hint">Bridge Name</string>
    <string name="bridge_number_hint">Bridge Number</string>
    <string name="participant_code_hint">Participant Code</string>
    <string name="host_code_hint">Host Code</string>
    <string name="participant_tone_prompt">Participant Code Tone</string>
    <string name="host_tone_prompt">Host Code Tone</string>
    <string name="call_order_prompt">Dial Code Order</string>
    <string name="callOrderLabel">Dial Code Order (for Hosting Calls)</string>
    <string name="pauseSliderLabel">Dialing Pause (in Seconds)</string>
    <string name="participantFirst">Participant Code First</string>
    <string name="hostFirst">Host Code First</string>
    <string name="uri_dial_button">Dial In</string>
    <string name="uri_save_button">Dial In and Save Bridge</string>
    <string name="behavior_settings">Behavior</string>
    <string name="info_settings">Info</string>
    <string name="pref_dialer_title">Dial Automatically</string>
    <string name="pref_dialer_summary">Places the call automatically once the dial in options are selected. Turn off to enable support for custom dialers.</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary">About the app and its design.</string>
    <string name="pref_pause_title">Default Pause</string>
    <string name="pref_pause_summary">Default pause length (in seconds) between codes when dialing,
        up to 12 seconds. This setting can be overriden when creating or modifying a bridge.</string>
    <string name="pref_about_dialog_title">Join My Bridge</string>
    <string name="pref_about_dialog_message">Test message</string>
    <string name="pref_about_dialog_positive">OK</string>
    <string name="about_dialog_title">Join My Bridge v1.1.0</string>
    <string name="about_dialog_description">A conference call line management tool for Android 4.1 and above.</string>
    <string name="about_dialog_author">Created by <b>John Misczak</b>.</string>
    <string name="about_dialog_thanks">Join My Bridge makes use of the following libraries:\n
        \nFloatingActionButton by makovkastar
        \nListViewAnimations by nhaarman
        \nMaterialEditText by rengwuxian
        \nMaterialDesignLibrary by navasmdc</string>
    <string name="pref_contact_title">Send Feedback</string>
    <string name="pref_contact_summary">Send the developer questions, feature requests, and/or suggestions.</string>
    <string name="pref_contact_uri">mailto:joinmybridge@gmail.com?subject=Join My Bridge Feedback</string>
    <string name="about_dialog_okay">OK</string>
    <string name="floating_action_button_license"><xliff:g id="mit_license">The MIT License (MIT)
        \n\nCopyright (c) 2014 Oleksandr Melnykov
        \n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
        \n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
        \nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</xliff:g></string>
</resources>