<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/behavior_settings"
        android:key="pref_key_behavior_settings">

        <SwitchPreference
            android:id="@+id/pref_dialer_switch"
            android:key="pref_dialer"
            android:title="@string/pref_dialer_title"
            android:summary="@string/pref_dialer_summary"
            android:defaultValue="true" />

        <EditTextPreference
            android:id="@+id/pref_pause_length"
            android:key="pref_pause"
            android:title="@string/pref_pause_title"
            android:summary="@string/pref_pause_summary"
            android:defaultValue="2"
            android:inputType="number" />

        </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/info_settings"
        android:key="pref_key_info_settings">

        <com.misczak.joinmybridge.AboutDialog
            android:title="@string/pref_about_title"
            android:summary="@string/pref_about_summary"/>

        <Preference
            android:title="@string/pref_contact_title"
            android:key="pref_key_contact_settings"
            android:summary="@string/pref_contact_summary">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/pref_contact_uri"/>
        </Preference>

    </PreferenceCategory>



</PreferenceScreen>