<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorTextIcons">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/bridge_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bridge_name_hint"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        app:floatingLabel="highlight"
        app:baseColor="@color/colorPrimaryText"
        app:primaryColor="@color/colorPrimary"
        app:singleLineEllipsis="true"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/bridge_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/bridge_number_hint"
        android:paddingBottom="16dp"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        app:floatingLabel="highlight"
        app:baseColor="@color/colorPrimaryText"
        app:primaryColor="@color/colorPrimary"
        app:singleLineEllipsis="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/participant_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/participant_code_hint"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            app:floatingLabel="highlight"
            app:baseColor="@color/colorPrimaryText"
            app:primaryColor="@color/colorPrimary"
            app:singleLineEllipsis="true"
            android:layout_weight="0.25"/>

        <Spinner
            android:id="@+id/bridgeFirstToneKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/dtmf_tones"
            android:prompt="@string/participant_tone_prompt"
            android:layout_weight="0.75"
            android:spinnerMode="dialog"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/host_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/host_code_hint"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            app:floatingLabel="highlight"
            app:baseColor="@color/colorPrimaryText"
            app:primaryColor="@color/colorPrimary"
            app:singleLineEllipsis="true"
            android:layout_weight="0.25"
            android:singleLine="false" />

        <Spinner
            android:id="@+id/bridgeSecondToneKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bridgeSecondToneLabel"
            android:entries="@array/dtmf_tones"
            android:prompt="@string/host_tone_prompt"
            android:spinnerMode="dialog"
            android:gravity="center"
            android:layout_weight="0.75"/>

    </LinearLayout>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fontFamily="sans-serif"
        android:textSize="16sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pauseSliderLabel"
            android:text="@string/pauseSliderLabel"/>

        <com.gc.materialdesign.views.Slider
            android:id="@+id/pauseSlider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_below="@id/pauseSliderLabel"
            android:paddingBottom="16dp"
            materialdesign:max="12"
            materialdesign:min="0"
            materialdesign:showNumberIndicator="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/callOrderLabel"
            android:labelFor="@id/callOrderSpinner"
            android:text="@string/callOrderLabel"
            android:layout_below="@id/pauseSlider"/>

        <Spinner
            android:id="@+id/callOrderSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/callOrderLabel"
            android:entries="@array/call_order"
            android:prompt="@string/call_order_prompt"
            android:spinnerMode="dialog"
            android:gravity="center"
            android:layout_marginLeft="-10dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorSpinnerDivider"
            android:layout_below="@id/callOrderSpinner"/>

    </RelativeLayout>


</LinearLayout>


</ScrollView>