<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorTextIcons"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/bridge_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bridge_name_hint"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        app:floatingLabel="highlight"
        app:baseColor="@color/colorPrimaryText"
        app:primaryColor="@color/colorPrimary"
        app:singleLineEllipsis="true"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/bridge_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/bridge_number_hint"
        android:paddingBottom="16dp"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        app:floatingLabel="highlight"
        app:baseColor="@color/colorPrimaryText"
        app:primaryColor="@color/colorPrimary"
        app:singleLineEllipsis="true"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/participant_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/participant_code_hint"
        android:paddingBottom="16dp"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        app:floatingLabel="highlight"
        app:baseColor="@color/colorPrimaryText"
        app:primaryColor="@color/colorPrimary"
        app:singleLineEllipsis="true"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/host_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/host_code_hint"
        android:paddingBottom="16dp"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        app:floatingLabel="highlight"
        app:baseColor="@color/colorPrimaryText"
        app:primaryColor="@color/colorPrimary"
        app:singleLineEllipsis="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:fontFamily="sans-serif"
        android:textSize="16sp" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bridgeFirstToneLabel"
                android:labelFor="@id/bridgeFirstToneKey"
                android:text="@string/bridgeFirstToneLabel"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <Spinner
                android:id="@+id/bridgeFirstToneKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/dtmf_tones"
                android:prompt="@string/participant_tone_prompt"
                android:layout_below="@+id/bridgeFirstToneLabel"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="-10dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorSpinnerDivider"
                android:layout_below="@id/bridgeFirstToneKey"/>

            </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bridgeSecondToneLabel"
                android:labelFor="@id/bridgeSecondToneKey"
                android:text="@string/bridgeSecondToneLabel"
                android:layout_marginLeft="10dp"/>

            <Spinner
                android:id="@+id/bridgeSecondToneKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bridgeSecondToneLabel"
                android:entries="@array/dtmf_tones"
                android:prompt="@string/host_tone_prompt"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorSpinnerDivider"
                android:layout_below="@id/bridgeSecondToneKey"
                android:layout_marginLeft="10dp"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fontFamily="sans-serif"
        android:textSize="16sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/callOrderLabel"
            android:labelFor="@id/callOrderSpinner"
            android:text="@string/callOrderLabel"/>

        <Spinner
            android:id="@+id/callOrderSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/callOrderLabel"
            android:entries="@array/call_order"
            android:prompt="@string/call_order_prompt"
            android:layout_marginLeft="-10dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorSpinnerDivider"
            android:layout_below="@id/callOrderSpinner"/>

    </RelativeLayout>






</LinearLayout>

